fix ie6 menu too much padding

--- a/style/ie_fixes.css
+++ b/style/ie_fixes.css
@@ -5,6 +5,7 @@
 #news li,
 #contentwrapper,
 #fauxcolbgR,
-.containfloats {
+.containfloats,
+.mainnav li{
     zoom: 1;
 }
